--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>We security solution</title>
+    <title>Berimbolo Security solution</title>
     <link rel="shortcut icon" href="images/icon.png" type="image/x-icon">
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -64,7 +64,7 @@
     <header>
       <div class=" header-text text-white">
         <h5 class="mb-3 wow bounceInUp"></h5>
-        <h1 class="display-4 fw-bold mb-5 wow bounceInUp">WE SECURITY <br> For SECURITY SOLUTIONS</h1>
+        <h1 class="display-4 fw-bold mb-5 wow bounceInUp">Berimbolo Security <br> For SECURITY SOLUTIONS</h1>
         <a href="#" class="btn btn-success btn-lg me-3 wow bounceInLeft" data-wow-duration="2s" data-wow-delay="5s">Read
           More</a>
         <a href="#" class="btn btn-success btn-lg wow bounceInRight" data-wow-duration="2s" data-wow-delay="7s">Contact
@@ -86,7 +86,7 @@
               Trusted security experts with 30+ years.
             </h3>
 
-            <p class="lead my-3 fw-medium text-secondary ">For over thirty years, WE Security has been a trusted provider
+            <p class="lead my-3 fw-medium text-secondary ">For over thirty years, Berimbolo Security has been a trusted provider
               of personalized safety and protection services. Our experienced team offers on-site security,
               surveillance, risk assessments, and cyber security solutions. We prioritize advanced technology and
               excellent customer service to safeguard businesses, events, and individuals.</p>
@@ -431,7 +431,7 @@
           <div class=" col-md-4 col-sm-6 mb-2">
             <div class="card bg-success bg-opacity-10  text-center border-0">
               <img src="images/testimonial-1.jpg" class="w-25 mx-auto rounded-circle" alt="" style="margin-top: -40px;">
-              <p class="my-3">WE Security Services made upgrading my home security a breeze. Their expertise and quick installation exceeded my expectations.</p>
+              <p class="my-3">Berimbolo Security Services made upgrading my home security a breeze. Their expertise and quick installation exceeded my expectations.</p>
               <h4 class="mb-3">Eng A Ramdan</h4>
 
             </div><!-- card -->
@@ -441,7 +441,7 @@
           <div class=" col-md-4 col-sm-6 mb-2">
             <div class="card bg-success bg-opacity-10  text-center border-0">
               <img src="images/testimonial-2.jpg" class="w-25 mx-auto rounded-circle" alt="" style="margin-top: -40px;">
-              <p class="my-3">Impressed with the professionalism and quality of service provided by WE Security Solutions. Highly recommended for anyone needing CCTV solutions.</p>
+              <p class="my-3">Impressed with the professionalism and quality of service provided by Berimbolo Security Solutions. Highly recommended for anyone needing CCTV solutions.</p>
               <h4 class="mb-3">Eng Alaa</h4>
 
             </div><!-- card -->
